--- a/index.css
+++ b/index.css
@@ -33,3 +33,10 @@ button {
     width: 100px;
     margin: 1rem;
 }
+
+.buttons-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: .5rem;
+}
