--- a/index.css
+++ b/index.css
@@ -10,8 +10,12 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    transform: scale(1.5);
-    margin-top: 15%;
+    transform: scale(1.2);
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 
 h1 {
